# vpnhd

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  security.yml
docs/: BACKUP_RESTORE.md  CLIENT_MANAGEMENT.md  CLI_REFERENCE.md  CONTRIBUTING.md  FAQ.md  PERFORMANCE_TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: install.sh  uninstall.sh
src/vpnhd/: __init__.py  __version__.py  cli.py  exceptions.py
src/vpnhd/backup/: __init__.py  manager.py
src/vpnhd/client/: __init__.py  manager.py
src/vpnhd/config/: __init__.py  manager.py  models.py  schema.py  validator.py
src/vpnhd/config/templates/: ufw_rules.j2  wireguard_client.conf.j2  wireguard_server.conf.j2
src/vpnhd/crypto/: __init__.py  qrcode.py  rotation.py  server_config.py  ssh.py  wireguard.py
src/vpnhd/ddns/: __init__.py  detector.py  manager.py
src/vpnhd/ddns/providers/: __init__.py  base.py  cloudflare.py  duckdns.py  noip.py
src/vpnhd/events/: __init__.py  bus.py  types.py
src/vpnhd/monitoring/: __init__.py  collector.py  exporter.py  metrics.py
src/vpnhd/network/: __init__.py  discovery.py  interfaces.py  ipv6.py  testing.py  validation.py
src/vpnhd/notifications/: __init__.py  events.py  manager.py
src/vpnhd/notifications/channels/: __init__.py  base.py  email.py  webhook.py
src/vpnhd/phases/: __init__.py  base.py  phase1_debian.py  phase2_wireguard_server.py  phase3_router.py  phase4_fedora.py  phase4_linux_client.py  phase5_linux_client_ondemand.py  phase5_popos.py  phase6_mobile.py  phase6_termux.py  phase7_ssh_keys.py  phase8_security.py
src/vpnhd/security/: __init__.py  validators.py
src/vpnhd/server/: __init__.py  manager.py  models.py  sync.py
src/vpnhd/system/: __init__.py  commands.py  fail2ban_config.py  files.py  packages.py  services.py  ssh_config.py
src/vpnhd/system/package_managers/: apt.py  base.py  dnf.py  factory.py
src/vpnhd/testing/: __init__.py  performance.py
src/vpnhd/ui/: __init__.py  display.py  menus.py  prompts.py  validation.py
src/vpnhd/utils/: __init__.py  constants.py  distribution_helpers.py  helpers.py  logging.py
system/package_managers/: __init__.py  apt.py  base.py  dnf.py  factory.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_phase_integration.py
tests/unit/: __init__.py  test_commands.py  test_interfaces.py  test_interfaces.py.skip  test_packages.py  test_validators.py
