[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vpnhd"
version = "1.0.0"
description = "Privacy-first home VPN setup automation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [
    {name = "orpheus497", email = "vpnhd@example.com"}
]
keywords = [
    "vpn",
    "wireguard",
    "privacy",
    "security",
    "home-network",
    "automation",
    "cli"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]

dependencies = [
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.0.0",
    "python-dotenv>=1.0.0",
    "netifaces>=0.11.0",
    "jinja2>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
    "mypy>=0.950",
    "pre-commit>=2.15"
]

[project.urls]
Homepage = "https://github.com/orpheus497/vpnhd"
"Bug Tracker" = "https://github.com/orpheus497/vpnhd/issues"
Documentation = "https://github.com/orpheus497/vpnhd/tree/main/docs"
"Source Code" = "https://github.com/orpheus497/vpnhd"

[project.scripts]
vpnhd = "vpnhd.cli:main"

[tool.setuptools]
packages = ["vpnhd"]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
vpnhd = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | docs
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["vpnhd"]
known_third_party = ["rich", "click", "yaml", "jinja2"]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "netifaces",
    "yaml",
]
ignore_missing_imports = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--strict-markers -ra -q --cov=src/vpnhd --cov-report=html --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "system: System tests (requires root)",
    "slow: Slow tests",
    "skip_ci: Skip in CI environments"
]

# Coverage configuration
[tool.coverage.run]
source = ["src/vpnhd"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "except ImportError:",
    "if sys.version_info"
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Logging configuration for development
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.standard]
format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
level = "INFO"
formatter = "standard"
stream = "ext://sys.stdout"

[tool.logging.root]
level = "INFO"
handlers = ["console"]
