[metadata]
name = vpnhd
version = 1.0.0
author = orpheus497
author_email = vpnhd@example.com
description = Privacy-first home VPN setup automation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orpheus497/vpnhd
project_urls =
    Bug Tracker = https://github.com/orpheus497/vpnhd/issues
    Documentation = https://github.com/orpheus497/vpnhd/tree/main/docs
    Source Code = https://github.com/orpheus497/vpnhd
license = GPL-3.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: System Administrators
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src
install_requires =
    rich>=13.0.0
    click>=8.0.0
    pyyaml>=6.0.0
    jsonschema>=4.0.0
    python-dotenv>=1.0.0
    netifaces>=0.11.0
    jinja2>=3.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vpnhd = vpnhd.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=22.0
    flake8>=4.0
    isort>=5.0
    mypy>=0.950
    pre-commit>=2.15

[options.package_data]
vpnhd =
    py.typed

[bdist_wheel]
universal = 0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = --strict-markers -ra -q

[coverage:run]
source = src/vpnhd
omit =
    */tests/*
    */test_*.py
    */__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstractmethod

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .eggs,
    *.egg-info
ignore =
    E203,
    W503,
    E501

[isort]
profile = black
line_length = 100
multi_line_mode = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip_glob = .venv/*,venv/*

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False
check_untyped_defs = True
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
